[package]
name = "tanks"
version = "0.1.0"
edition = "2024"

[dependencies]
cfg-if = "1"
xenofrost = { path = "../xenofrost" }
wgpu = "22.0"
bytemuck = {version = "1.16", features = ["derive"] }
glam = {version = "0.30", features = ["bytemuck"]}
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = {version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]